@@ -218,55 +218,3 @@ setSummaryTemplate("multinom" = c(
 ))
 
 
-if(FALSE) {
-
-## packages
-library("memisc")
-library("AER")
-library("pscl")
-library("betareg")
-library("nnet")
-
-## ivreg
-data("CigarettesSW", package = "AER")
-CigarettesSW$rprice <- with(CigarettesSW, price/cpi)
-CigarettesSW$rincome <- with(CigarettesSW, income/population/cpi)
-CigarettesSW$tdiff <- with(CigarettesSW, (taxs - tax)/cpi)
-m1_ivreg <- ivreg(log(packs) ~ log(rprice) | tdiff, data = CigarettesSW, subset = year == "1995")
-m2_ivreg <- ivreg(log(packs) ~ log(rprice) + log(rincome) | log(rincome) + tdiff + I(tax/cpi),
-  data = CigarettesSW, subset = year == "1995")
-mtable(m1_ivreg, m2_ivreg) 
-
-## tobit
-data("Affairs", package = "AER")
-m1_tobit <- tobit(affairs ~ age + yearsmarried + religiousness + occupation + rating,
-  data = Affairs)
-m2_tobit <- tobit(affairs ~ age + yearsmarried + religiousness + occupation + rating,
-  right = 4, data = Affairs)
-mtable(m1_tobit, m2_tobit)
-
-## hurdle
-data("bioChemists", package = "pscl")
-m1_hurdle <- hurdle(art ~ . | kid5 + ment, data = bioChemists, dist = "negbin")
-m2_hurdle <- hurdle(art ~ . | .,           data = bioChemists, dist = "negbin")
-mtable(m1_hurdle, m2_hurdle)
-
-## zeroinfl
-m1_zeroinfl <- zeroinfl(art ~ . | kid5 + ment, data = bioChemists, dist = "negbin")
-m2_zeroinfl <- zeroinfl(art ~ . | .,           data = bioChemists, dist = "negbin")
-mtable(m1_zeroinfl, m2_zeroinfl)
-
-## betareg
-data("ReadingSkills", package = "betareg")
-m1_betareg <- betareg(accuracy ~ dyslexia * iq | 1,             data = ReadingSkills)
-m2_betareg <- betareg(accuracy ~ dyslexia * iq | dyslexia + iq, data = ReadingSkills)
-mtable(m1_betareg, m2_betareg)
-
-## multinom
-data("BankWages", package = "AER")
-m1_multinom <- multinom(job ~ education, data = BankWages,
-  subset = gender == "male", trace = FALSE)
-m2_multinom <- multinom(job ~ education + minority, data = BankWages,
-  subset = gender == "male", trace = FALSE)
-mtable(m1_multinom, m2_multinom)
-}
