@@ -1,4 +1,7 @@
-2012-02-10:
+2013-03-20:
+  - getSummary method for "mer" objects was broken and now is fixed.
+
+2013-02-10:
   - getSummary methods for "ivreg", "tobit" (from package "AER"),
     "hurdle", "zeroinfl" (from package "pscl"),
     "betareg" (from package "betareg"),
